[gd_scene load_steps=6 format=3 uid="uid://cmdyksxy0imga"]

[ext_resource type="Script" uid="uid://dbg8uk1qnu80w" path="res://scripts/TrustContract.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Normal"]
bg_color = Color(0.14, 0.14, 0.14, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.75, 0.75, 0.75, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.35)
shadow_size = 8
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Pressed"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.92, 0.92, 0.92, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 6
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Hover"]
bg_color = Color(0.22, 0.22, 0.22, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.25, 0.75, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 12
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Focus"]
bg_color = Color(0.16, 0.16, 0.16, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.85, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.45)
shadow_size = 12
shadow_offset = Vector2(0, 3)

[node name="TrustContract" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.65)

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Center" type="CenterContainer" parent="Root"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="Root/Center"]
custom_minimum_size = Vector2(980, 560)
layout_mode = 2
mouse_filter = 2

[node name="Margin" type="MarginContainer" parent="Root/Center/Panel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="VBox" type="VBoxContainer" parent="Root/Center/Panel/Margin"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 14

[node name="Title" type="Label" parent="Root/Center/Panel/Margin/VBox"]
layout_mode = 2
mouse_filter = 0
text = "Trust Contract"

[node name="BodyPanel" type="PanelContainer" parent="Root/Center/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
mouse_filter = 2

[node name="BodyMargin" type="MarginContainer" parent="Root/Center/Panel/Margin/VBox/BodyPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 14
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 14

[node name="Body" type="RichTextLabel" parent="Root/Center/Panel/Margin/VBox/BodyPanel/BodyMargin"]
layout_mode = 2
bbcode_enabled = true

[node name="ButtonCenter" type="CenterContainer" parent="Root/Center/Panel/Margin/VBox"]
custom_minimum_size = Vector2(0, 84)
layout_mode = 2
mouse_filter = 2

[node name="AcceptButton" type="Button" parent="Root/Center/Panel/Margin/VBox/ButtonCenter"]
custom_minimum_size = Vector2(460, 76)
layout_mode = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_Normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_Pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_Hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_Focus")
text = "I Understand"

[connection signal="pressed" from="Root/Center/Panel/Margin/VBox/ButtonCenter/AcceptButton" to="." method="_on_accept_pressed"]
